[tool.poetry]
name = "streamlit_qiita"
version = "0.1.0"
description = ""
authors = ["Shun Asai <syun.asai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
